<resources>
    <string name="app_name">BloodDonation</string>
    <string name="formless_mother">Formless Mother</string>
    <string name="authorization">Авторизация</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="signing_up">Регистрация</string>
    <string name="logining">Вход</string>
    <string name="already_have_an_account">Уже есть аккаунт?</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="last_name">Фамилия</string>
    <string name="middle_name">Отчество</string>
    <string name="first_name">Имя</string>
    <string name="proceed">Продолжить</string>
    <string name="filling_personal_data">Заполнение персональных данных</string>
    <string name="date_template">дд.мм.гггг</string>
    <string name="date_time_template">дд.мм.гггг чч:мм</string>
    <string name="sex">Пол</string>
    <string name="male">Муж</string>
    <string name="female">Жен</string>
    <string name="city">Город</string>
    <string name="blood_type">Группа крови</string>
    <string name="series_and_number">Серия и номер паспорта</string>
    <string name="whole_blood">Цельная кровь</string>
    <string name="plasma">Плазма</string>
    <string name="platelets">Тромбоциты</string>
    <string name="red_blood_cells">Эритроциты</string>
    <string name="granulocytes">Гранулоциты</string>
    <string-array name="blood_components">
        <item>Цельная кровь</item>
        <item>Плазма</item>
        <item>Тромбоциты</item>
        <item>Эритроциты</item>
        <item>Гранулоциты</item>
    </string-array>
    <string name="check_validity_of_your_data">Проверьте правильность введённых данных</string>
    <string name="other">Другой</string>
    <string name="write_date_in_a_correct_way">Укажите дату в правильном формате</string>
    <string name="write_data_in_a_correct_way">Заполните данные в правильном формате</string>
    <string name="application_date">Дата приёма: 02.07.2023</string>
    <string name="application_blood_component">Компонент: %s</string>
    <string name="donation_type_template">Тип донации: %s</string>
    <string name="donation_place_template">Центр крови: %s</string>
    <string name="donator_card">Карточка донора</string>
    <string name="plan_a_donation">Запланировать донацию</string>
    <string name="free_of_charge">Безвозмездно</string>
    <string name="paid">Платно</string>
    <string name="donation_type">Тип донации</string>
    <string name="blood_component">Компонент крови</string>
    <string name="donation_place">Центр крови</string>
    <string name="make_an_appointment">Запланировать</string>
    <string name="accepted">Принята</string>
    <string name="closed">Закрыта</string>
    <string name="application">Заявка</string>
    <string name="last_name_template">Фамилия: %s</string>
    <string name="first_name_template">Имя: %s</string>
    <string name="middle_name_template">Отчество: %s</string>
    <string name="email_template">Email: %s</string>
    <string name="sex_template">Пол: %s</string>
    <string name="age_template">Дата рождения: %s</string>
    <string name="series_and_number_template">Серия и номер паспорта: %s</string>
    <string-array name="blood_types">
        <item>Первая положительная - O(I) Rh+</item>
        <item>Первая отрицательная - O(I) Rh-</item>
        <item>Вторая положительная - A(II) Rh+</item>
        <item>Вторая отрицательная - A(II) Rh-</item>
        <item>Третья положительная - B(III) Rh+</item>
        <item>Третья отрицательная - B(III) Rh-</item>
        <item>Четвёртая положительная - AB(IV) Rh+</item>
        <item>Четвёртая отрицательная - AB(IV) Rh-</item>
        <item>Не знаю</item>
    </string-array>
    <string-array name="cities">
        <item>Москва</item>
        <item>Санкт-Петербург</item>
        <item>Казань</item>
        <item>Новосибирск</item>
        <item>Уфа</item>
        <item>Екатеринбург</item>
        <item>Нижний Новгород</item>
        <item>Омск</item>
        <item>Ярославль</item>
        <item>Пермь</item>
        <item>Краснодар</item>
        <item>Волгоград</item>
        <item>Воронеж</item>
        <item>Ростов-на-Дону</item>
        <item>Барнаул</item>
        <item>Красноярск</item>
        <item>Челябинск</item>
        <item>Хабаровск</item>
        <item>Рязань</item>
        <item>Кемерово</item>
        <item>Саратов</item>
        <item>Новокузнецк</item>
        <item>Калининград</item>
        <item>Тверь</item>
        <item>Чебоксары</item>
        <item>Томск</item>
        <item>Симферополь</item>
        <item>Иваново</item>
        <item>Иркутск</item>
        <item>Киров</item>
        <item>Самара</item>
        <item>Астрахань</item>
        <item>Сочи</item>
        <item>Владивосток</item>
        <item>Ижевск</item>
        <item>Тюмень</item>
        <item>Пенза</item>
        <item>Набережные Челны</item>
        <item>Белгород</item>
        <item>Севастополь</item>
        <item>Махачкала</item>
        <item>Альметьевск</item>
    </string-array>
</resources>