<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingStart="40dp"
    android:paddingTop="15dp"
    android:paddingEnd="40dp"
    tools:context=".RegistrationProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/logo"
                android:contentDescription="@null" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/formless_mother"
                android:textColor="@color/red"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/filling_personal_data"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextDateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/blue"
            android:hint="@string/date_template"
            android:inputType="date"
            android:textColor="@color/blue"
            android:textColorHint="@color/gray"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="10dp"
            android:text="@string/sex"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/male"
                android:textColor="@color/blue" />

            <RadioButton
                android:id="@+id/radioButtonFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/female"
                android:textColor="@color/blue" />

            <RadioButton
                android:id="@+id/radioButtonOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/other"
                android:textColor="@color/blue" />

        </RadioGroup>

        <EditText
            android:id="@+id/editTextCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:hint="@string/city"
            android:inputType="textCapWords"
            android:textColor="@color/blue"
            android:textColorHint="@color/gray"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="20dp"
            android:text="@string/blood_type"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerBloodTypes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:backgroundTint="@color/red"/>

        <EditText
            android:id="@+id/editTextSeriesAndNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/blue"
            android:hint="@string/series_and_number"
            android:inputType="number"
            android:textColor="@color/blue"
            android:textColorHint="@color/gray"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="10dp"
            android:text="@string/blood_components"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBoxWholeBlood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/whole_blood"
                    android:textColor="@color/blue" />

                <CheckBox
                    android:id="@+id/checkBoxPlasma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plasma"
                    android:textColor="@color/blue" />

                <CheckBox
                    android:id="@+id/checkBoxPlatelets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/platelets"
                    android:textColor="@color/blue" />

            </RadioGroup>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBoxRedBloodCells"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/red_blood_cells"
                    android:textColor="@color/blue" />

                <CheckBox
                    android:id="@+id/checkBoxGranulocytes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/granulocytes"
                    android:textColor="@color/blue" />

            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/buttonSingUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/red"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>

</ScrollView>