<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="50dp"
    android:paddingEnd="50dp"
    android:background="@color/white"
    tools:context=".RegistrationActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/logo"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/formless_mother"
            android:textColor="@color/red"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/signing_up"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/blue"
        android:textColorHint="@color/gray"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/blue"
        android:hint="@string/first_name"
        android:inputType="textCapWords"
        android:textColor="@color/blue"
        android:textColorHint="@color/gray"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/blue"
        android:hint="@string/last_name"
        android:inputType="textCapWords"
        android:textColor="@color/blue"
        android:textColorHint="@color/gray"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextMiddleName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/blue"
        android:hint="@string/middle_name"
        android:inputType="textCapWords"
        android:textColor="@color/blue"
        android:textColorHint="@color/gray"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/blue"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/blue"
        android:textColorHint="@color/gray"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextRepeatedPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/blue"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:textColor="@color/blue"
        android:textColorHint="@color/gray"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonSingUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/red"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/proceed"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/already_have_an_account"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewSwitchToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>